# nerddiary

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  dev.yml
docker/: Dockerfile  docker-compose-dev.yml  docker-compose.yml
docs/: botlogic.md
nerddiary/: cli.py  conftest.py  log.py
nerddiary/asynctools/: asyncapp.py
nerddiary/asynctools/test/: test_asyncapp.py  test_delayedsignal.py
nerddiary/bots/tgbot/: admin.py  bot.py  config.py  conftest.py  context.py  handlers.py  helpers.py  job.py  model.py  strings.py  workflow.py
nerddiary/client/: __init__.py  client.py  rpc.py
nerddiary/core/: conftest.py
nerddiary/core/asynctools/: asyncapp.py  asyncresult.py
nerddiary/core/client/: client.py  config.py  job.py  proto.py  rpc.py
nerddiary/core/data/: crypto.py  data.py
nerddiary/core/job/: job.py
nerddiary/core/poll/: poll.py  primitives.py  question.py  type.py  workflow.py
nerddiary/core/primitive/: timezone.py  valuelabel.py
nerddiary/core/report/: report.py
nerddiary/core/server/: config.py  rpc.py  schema.py  server.py
nerddiary/core/session/: string.py
nerddiary/core/user/: user.py
nerddiary/data/: data.py
nerddiary/data/test/: test_crypto.py  test_data.py
nerddiary/error/: error.py
nerddiary/job/test/: test_job.py
nerddiary/poll/: poll.py  question.py  type.py  workflow.py
nerddiary/poll/test/: test_poll.py  test_question.py  test_type.py
nerddiary/primitive/: valuelabel.py
nerddiary/primitive/test/: test_valuelabel.py
nerddiary/report/test/: test_report.py
nerddiary/server/: config.py  rpc.py  schema.py  server.py
nerddiary/server/mixins/: pollmixin.py  sessionmixin.py
nerddiary/server/session/: session.py  string.py
nerddiary/test/: test_cli.py
nerddiary/user/: user.py
nerddiary/utils/: sensitive.py
(+26 files in other folders)
