[tool.poetry]
name = "nerddiary"
version = "0.1.0"
description = "A collection of tools to capture and analyze migraines"
authors = ["mishamsk <mishamsk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://nerddiary.app"
repository = "https://github.com/mishamsk/nerddiary"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: News/Diary",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Stubs Only",
    'Natural Language :: Russian'

]
packages = [
    { include = "nerddiary" }
]
exclude = ["nerddiary/**/test/", "nerddiary/**/conftest.py"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.29"
cryptography = "^36.0.1"
cryptg = "^0.2.post4"
Pillow = "^9.0.0"
Telethon = "^1.24.0"
APScheduler = "^3.8.1"
pytz = "^2021.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
bump2version = "^1.0.1"
coverage = {extras = ["toml"], version = "^6.2"}
isort = "^5.10.1"
pre-commit = "^2.17.0"
pytest-asyncio = "^0.17.2"

[tool.poetry.scripts]
nerddiary = 'nerddiary.cli:cli'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--basetemp=testtemp -m 'not performance'"
markers = "performance: mark a test as a performance test, skipped by default."

[tool.coverage.run]
omit = ["*/test/*"]

[tool.coverage.report]
omit = ["*/test/*"]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
known_typing="typing"
sections= ["FUTURE","STDLIB","FIRSTPARTY","THIRDPARTY","LOCALFOLDER","TYPING"]
# skip files
#skip_glob = docs/conf.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
